testsuite/lab2-testsuite/good/subtyping/cmp_if_int_lte_double.cc
int main () {
	if (3 <= 5.0)
		let int y;
	else {}
	return 0;
}
