testsuite/lab2-testsuite/bad/redecl_var_after_block_2.cc
int main() {
	let int x = 1;
	{
		let int y;
	}
	let int x;
	return 0;
}
